--- a/Prototype/nbproject/project.properties
+++ b/Prototype/nbproject/project.properties
@@ -27,10 +27,30 @@ dist.dir=dist
 dist.jar=${dist.dir}/Prototype.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-lang-2.6.jar=C:\\Users\\Andrew\\Desktop\\commons-lang-2.6.jar
+file.reference.commons-lang-2.6.jar-1=dist\\lib\\commons-lang-2.6.jar
+file.reference.commons-logging-1.1.3.jar=C:\\Users\\Andrew\\Desktop\\commons-logging-1.1.3.jar
+file.reference.commons-logging-1.1.3.jar-1=dist\\lib\\commons-logging-1.1.3.jar
+file.reference.Desktop-hsqldb-2.3.4=C:\\Users\\Andrew\\Desktop\\hsqldb-2.3.4
+file.reference.Desktop-UCanAccess-4.0.1-bin=C:\\Users\\Andrew\\Desktop\\UCanAccess-4.0.1-bin
+file.reference.jackcess-2.1.6.jar=C:\\Users\\Andrew\\Desktop\\jackcess-2.1.6.jar
+file.reference.jackcess-2.1.6.jar-1=dist\\lib\\jackcess-2.1.6.jar
+file.reference.lib-hsqldb-2.3.4=dist\\lib\\hsqldb-2.3.4
+file.reference.lib-UCanAccess-4.0.1-bin=dist\\lib\\UCanAccess-4.0.1-bin
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.Desktop-UCanAccess-4.0.1-bin}:\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-logging-1.1.3.jar}:\
+    ${file.reference.Desktop-hsqldb-2.3.4}:\
+    ${file.reference.jackcess-2.1.6.jar}:\
+    ${file.reference.lib-UCanAccess-4.0.1-bin}:\
+    ${file.reference.commons-lang-2.6.jar-1}:\
+    ${file.reference.commons-logging-1.1.3.jar-1}:\
+    ${file.reference.lib-hsqldb-2.3.4}:\
+    ${file.reference.jackcess-2.1.6.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
