--- a/StockManagemetSystem/nbproject/project.properties
+++ b/StockManagemetSystem/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=StockManagemetSystem
+application.vendor=zanesmith
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,14 +27,21 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/StockManagemetSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.1.4.jar=src/jcalendar-1.1.4.jar
+file.reference.jcalendar.jar=src/jcalendar.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.jcalendar.jar}:\
+    ${file.reference.jcalendar-1.1.4.jar}:\
+    ${libs.JCalander.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
