--- a/StockManagemetSystem/nbproject/project.properties
+++ b/StockManagemetSystem/nbproject/project.properties
@@ -29,15 +29,13 @@ dist.jar=${dist.dir}/StockManagemetSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.1.4.jar=src/jcalendar-1.1.4.jar
-file.reference.jcalendar.jar=src/jcalendar.jar
+file.reference.jcalendar-1.4.jar-1=dist\\lib\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.jcalendar.jar}:\
-    ${file.reference.jcalendar-1.1.4.jar}:\
-    ${libs.JCalander.classpath}
+    ${libs.JCalander.classpath}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
