--- a/StockManagemetSystem/nbproject/private/private.properties
+++ b/StockManagemetSystem/nbproject/private/private.properties
@@ -1,7 +1,2 @@
 compile.on.save=true
-do.depend=false
-do.jar=true
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\user1\\Documents\\NetBeansProjects\\stockManager\\StockManagemetSystem\\src\\plugins\\jcalendar-1.4.jar
-javac.debug=true
-javadoc.preview=true
-user.properties.file=C:\\Users\\user1\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Chad\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
