--- a/StockManagemetSystem/nbproject/project.properties
+++ b/StockManagemetSystem/nbproject/project.properties
@@ -29,13 +29,17 @@ dist.jar=${dist.dir}/StockManagemetSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=src\\plugins\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=dist\\lib\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.32-bin.jar=src\\plugins\\mysql-connector-java-5.1.32-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${libs.JCalander.classpath}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.32-bin.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
