--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /StockManagemetSystem/build/
 /ResturantManagementSystem/build/
 /ResturantManagementSystem/nbproject/private/
+/ResturantManagementSystem/dist/
