--- a/ResturantManagementSystem/nbproject/project.properties
+++ b/ResturantManagementSystem/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ResturantManagementSystem
+application.vendor=zanesmith
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,14 +27,17 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/ResturantManagementSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=src\\plugins\\jcalendar-1.4.jar
+file.reference.mail.jar=src/plugins/mail.jar
 file.reference.mysql-connector-java-5.1.32-bin.jar=src\\plugins\\mysql-connector-java-5.1.32-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-java-5.1.32-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.32-bin.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
