--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /ResturantManagementSystem/build/
 /ResturantManagementSystem/nbproject/private/
 /ResturantManagementSystem/dist/
+/OrderManagementSystem/build/
+/OrderManagementSystem/dist/
