--- a/ResturantManagementSystem/nbproject/project.properties
+++ b/ResturantManagementSystem/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/ResturantManagementSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.itextpdf-5.1.0.jar=src\\plugins\\itextpdf-5.1.0.jar
 file.reference.jcalendar-1.4.jar=src\\plugins\\jcalendar-1.4.jar
 file.reference.mail.jar=src/plugins/mail.jar
 file.reference.mysql-connector-java-5.1.32-bin.jar=src\\plugins\\mysql-connector-java-5.1.32-bin.jar
@@ -37,7 +38,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mysql-connector-java-5.1.32-bin.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${file.reference.itextpdf-5.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
